[workspace]
members = [
    "examples/*"
]

[workspace.dependencies]
softbuffer = "0.4.2"
terminalge-rs = { path = "." }
winit = "0.29.15"

[package]
name = "terminalge-rs"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/TheYahton/terminalge-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27.0"
