[package]
name = "terminalge-rs"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/TheYahton/terminalge-rs"

[features]
default = ["ascii"]
ascii = []
blocks = []
truecolor = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27.0"
